# LibSWD

./: .travis.yml  meson.build  meson_options.txt
src/: config.h  libswd.h  meson.build
